<resources>
    <!-- primer contenido -->
    <string name="app_name">MiauApp</string>
    <string name="btnanterior">Anterior Pagina</string>
    <string name="img1">logouno</string>
    <string name="btn">REGISTRATE AHORA</string>
    <string name="btn2">Ya estoy registrado </string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_iniciarSesion">Registro</string>

    <!-- contenido registro -->
    <string name="textView">Registrate</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apelllido">Apellidos</string>
    <string name="txt_correo">Correo Electronico </string>
    <string name="txt_password">Contraseña</string>
    <!--<string name="txt_usuario">repetir contraseña</string> -->

    <string name="btn3">Aceptar</string>
    <string name="btn4">Cancelar </string>

    <string name="sex">sexo</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="password">Contrasena</string>

    <!-- contenido iniciar sesion -->
    <string name="title_activity_inciar_sesion">InciarSesion</string>
    <string name="ini_sesion">Iniciar Sesion</string>
    <string name="txt_usuario_sesion">usuario</string>
    <string name="txt_pasword_sesion">Contraseña</string>
    <string name="btn_aceptar_sesion">Ingresar</string>
    <string name="btn_cancelar_sesion">Cancelar</string>
    <string name="btnanteriorsesion">Anterior Pagina</string>
    <string name="string_btnanteriorsesion">\@string/btnanteriorsesion</string>

    <string name="title_activity_base_de_datos">BaseDeDatos</string>
    <string name="txt_codigo">Descripcion del producto</string>
    <string name="txt_descripcion">Cantidad del producto</string>
    <string name="txt_precio">Precio del producto</string>
    <string name="BotonRegistrar">Registrar Producto</string>
    <!--!   <string name="BotonBuscar">Buscar Producto</string>-->
    <string name="BotonEliminar">Eliminar Producto</string>
    <string name="BotonModificar">Modificar Producto</string>
    <string name="registrar_producto">Registrar Producto</string>
    <string name="btnanteriorbd">Anterior Pagina</string>
    <string name="todo">TODO</string>
    <string name="title_activity_miauapp">miauapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--!   para activity miau app los botones-->
    <string name="anuncios">Anuncios</string>
    <string name="amigos">Amigos</string>
    <string name="favoritos">Favoritos</string>
    <string name="citas">Citas</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat_usuario">chatUsuario</string>
    <string name="daphne">daphne</string>
    <string name="title_activity_chat">chat</string>
    <string name="title_activity_login">login</string>

</resources>
