<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BaseDeDatos"
    tools:showIn="@layout/activity_base_de_datos">

    <EditText
        android:id="@+id/txt_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="109dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_descripcion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_codigo" />

    <ImageButton
        android:id="@+id/btnanteriorbd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:onClick="btnanteriorbd"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="32dp" />

    <EditText
        android:id="@+id/txt_codigo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="108dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_codigo"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/txt_precio"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/txt_precio"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_descripcion"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="108dp"
        android:text="@string/registrar_producto"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnanteriorbd"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="111dp"
        android:onClick="RegistrarProductos"
        android:text="@string/BotonRegistrar"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_precio" />

    <Button
        android:id="@+id/BotonBuscar"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="109dp"
        android:onClick="Buscar"
        android:text="@string/BotonBuscar"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/BotonEliminar"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="113dp"
        android:onClick="Eliminar"
        android:text="@string/BotonEliminar"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonBuscar" />

    <Button
        android:id="@+id/BotonModificar"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="119dp"
        android:onClick="Modificar"
        android:text="@string/BotonModificar"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonEliminar" />
</android.support.constraint.ConstraintLayout>